# rust-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md
programs/rust-anchor/: Cargo.toml
programs/rust-anchor/src/: lib.rs
src/: client.rs  lib.rs
tests/: rust-anchor.ts
